--- a/views/home.html
+++ b/views/home.html
@@ -29,9 +29,9 @@
     <!-- <h2 class="mb-4 text-center">Productos disponibles</h2> -->
     <div class="text-center mb-4">
       <h1 class="display-6 fw-bold d-inline-flex align-items-center gap-2">
-        <i class="bi bi-bag-heart"></i>
+        <i class="bi-cart-check-fill texto-azul-primario"></i>
         Productos disponibles
-        <span id="badgeCount" class="badge rounded-pill text-bg-primary ms-2">0</span>
+        <span id="badgeCount" class="badge  text-bg-primary ms-1 fs-4">0</span>
       </h1>
       <p class="text-secondary mt-2 mb-0">Explora las subastas activas en este momento</p>
     </div>
