--- a/views/producto.html
+++ b/views/producto.html
@@ -10,12 +10,23 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="login-bg">
+<body class="bg-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-custom">
+    <div class="container">
+      <a class="navbar-brand" href="home.html">Subastas WCH</a>
+      <span id="usuarioActivo" class="navbar-text text-light"></span>
+
+      <div class="ms-auto">
+        <a href="/admin.html" id="btnAdmin" class="btn btn-warning d-none">Volver a panel admin</a>
+        <a href="/logout" class="btn btn-outline-light">Cerrar sesión</a>
+      </div>
+    </div>
+  </nav>
 
     <main class="container py-5">
-        <a href="/home.html" class="btn btn-secondary mb-3">&larr; Volver a Productos disponibles</a>
+        <a href="/home.html" class="btn btn-primary mb-3">&larr; Volver a Productos disponibles</a>
 
-        <div class="card shadow">
+        <div class="card shadow2">
             <div class="card-body text-center">
                 <h3 id="nombre" class="card-title texto-azul-primario"></h3>
                 <div id="carouselProducto" class="carousel slide my-3" data-bs-ride="carousel">
