--- a/views/admin.html
+++ b/views/admin.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel Administrador</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -12,7 +13,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
     <a class="navbar-brand" href="home.html">Subastas WCH</a>
     <div class="ms-auto">
-      <a href="/home.html" class="btn btn-outline-light me-2">Ir al sitio</a>
+      <a href="/home.html" class="btn btn-outline-light me-2" target="_blank">Ir al sitio</a>
       <a href="/logout" class="btn btn-outline-light">Cerrar sesión</a>
     </div>
   </nav>
